potential bug display: center; no text-align: center yes

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ div {
     font-family: 'Roboto Mono', monospace;
     font-weight: 700;
     color: bisque;
-    display: center;
+    text-align: center;
 }
 
 .titlebar .subtext{
@@ -87,7 +87,7 @@ div {
     font-family: 'Roboto Mono', monospace;
     font-weight: 400;
     color:bisque;
-    display: center;
+    text-align: center;
 }
 
 /*-----------------------------------------------------------------------*/
